<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD">


        <TextView
            android:id="@+id/question_view_5"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_4_d" />

        <TextView
            android:id="@+id/header"
            android:textColor="#B71C1C"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/christmas_s_quiz"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:fontFamily="@font/freckle_face"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_view_1"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <CheckBox
            android:id="@+id/check_1_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/a_frankincense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_1" />

        <CheckBox
            android:id="@+id/check_1_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_gold"
            app:layout_constraintStart_toStartOf="@+id/check_1_a"
            app:layout_constraintTop_toBottomOf="@+id/check_1_a" />

        <CheckBox
            android:id="@+id/check_1_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_bread"
            app:layout_constraintStart_toStartOf="@+id/check_1_b"
            app:layout_constraintTop_toBottomOf="@+id/check_1_b" />

        <CheckBox
            android:id="@+id/check_1_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_myrrh"
            app:layout_constraintStart_toStartOf="@+id/check_1_c"
            app:layout_constraintTop_toBottomOf="@+id/check_1_c" />

        <TextView
            android:id="@+id/question_view_2"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_1_d" />

        <RadioGroup
            android:id="@+id/radio_group_1"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_2">

            <RadioButton
                android:id="@+id/radio_button_2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fish" />

            <RadioButton
                android:id="@+id/radio_button_2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/old_socks" />

            <RadioButton
                android:id="@+id/radio_button_2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/christmas_lights" />

            <RadioButton
                android:id="@+id/radio_button_2_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fruitcakes" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_view_3"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_1" />

        <EditText
            android:id="@+id/edit_text_answer_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/answer_here"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_3" />

        <TextView
            android:id="@+id/question_view_4"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_answer_3" />

        <CheckBox
            android:id="@+id/check_4_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/zorro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_4" />

        <CheckBox
            android:id="@+id/check_4_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kris_kringle"
            app:layout_constraintStart_toStartOf="@+id/check_4_a"
            app:layout_constraintTop_toBottomOf="@+id/check_4_a" />

        <CheckBox
            android:id="@+id/check_4_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saint_nick"
            app:layout_constraintStart_toStartOf="@+id/check_4_b"
            app:layout_constraintTop_toBottomOf="@+id/check_4_b" />

        <CheckBox
            android:id="@+id/check_4_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuck_norris"
            app:layout_constraintStart_toStartOf="@+id/check_4_c"
            app:layout_constraintTop_toBottomOf="@+id/check_4_c" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_5">

            <RadioButton
                android:id="@+id/radio_button_5_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/at_the_airport" />

            <RadioButton
                android:id="@+id/radio_button_5_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/in_the_bath_tub" />

            <RadioButton
                android:id="@+id/radio_button_5_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/in_a_christmas_tree" />

            <RadioButton
                android:id="@+id/radio_button_5_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/on_the_roof" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_view_6"
            style="@style/questionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/question_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <EditText
            android:id="@+id/edit_text_answer_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/answer_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_view_6" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:textColor="#B71C1C"
            android:text="@string/check"
            android:onClick="checkQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_answer_6" />

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_6_correct_answer"
            app:layout_constraintBaseline_toBaselineOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/number_of_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkQuestion"
            android:text="0"
            app:layout_constraintBaseline_toBaselineOf="@+id/correct_answer"
            app:layout_constraintEnd_toStartOf="@+id/correct_answer" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>